--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,10 @@
     @apply text-lg font-semibold;
   }
   a {
-    @apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600;
+    @apply underline text-blue-600 hover:text-blue-800;
+  }
+  p > a {
+    @apply visited:text-purple-600;
   }
   main {
     @apply max-w-3xl mx-auto pt-6;
@@ -47,6 +50,12 @@
   }
   form > div > select {
     @apply mt-2 block w-full rounded-md border-0 py-1.5 pl-3 pr-10 text-gray-900 ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6;
+  }
+  nav > ul > li > a.active-route {
+    @apply font-extrabold;
+  }
+  nav > ul > li > a {
+    @apply no-underline;
   }
 }
 
